--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
           </div>
         </div>
       </div>
-      <div class="output" id="output"></div>
+      <div class="output-outer-box"> 
+        <div class="output" id="output"></div>
+      </div>
       <div class="buttons">
         <input class="button" type="button" name="numero" value="7">
         <input class="button" type="button" name="numero" value="8">
